overflow x phone bug

--- a/src/components/header.module.scss
+++ b/src/components/header.module.scss
@@ -18,7 +18,7 @@
 
 .title h4 a {
   color: #dfdfdf;
-  font-size: 3rem;
+  font-size: 2rem;
   text-decoration: none;
 }
 
@@ -58,10 +58,7 @@
 }
 
 @media screen and (max-width: 768px) {
-  html {
-    overflow-x: hidden;
-  }
-
+  html,
   body {
     overflow-x: hidden;
   }
