--- a/src/components/layout.module.scss
+++ b/src/components/layout.module.scss
@@ -1,6 +1,6 @@
 .container {
   margin: 0 auto;
-  max-width: 750px;
+  max-width: 1000px;
   padding: 1rem;
 
   display: flex;
@@ -14,4 +14,10 @@
 
 h1 {
   color: #000000;
+}
+
+@media screen and (max-width: 768px) {
+  main {
+    overflow-x: hidden;
+  }
 }
